# mac-cleaner

./: Cargo.toml  README.md  TESTING.md
.github/workflows/: tests.yml
examples/: ui_svg.rs
src/: app.rs  cli.rs  config.rs  event.rs  fs_util.rs  lib.rs  main.rs  model.rs  privilege.rs
src/clean/: mod.rs
src/scan/: caches.rs  dev_artifacts.rs  duplicates.rs  icloud.rs  large.rs  logs.rs  mod.rs  trash_cat.rs
src/ui/: dashboard.rs  detail.rs  footer.rs  header.rs  mod.rs  modal.rs  sidebar.rs  terminal.rs  theme.rs  widgets.rs
tests/: e2e.rs  integration.rs  integration_test.rs
tests/common/: mod.rs
tests/e2e/: fixtures.rs  flow.rs
tests/integration/: config_cli.rs
tests/integration/cleaning/: clean_flow.rs  mod.rs
tests/integration/scanners/: caches.rs  dev_artifacts.rs  duplicates.rs  icloud.rs  large.rs  logs.rs  mod.rs  orchestrator.rs
