[package]
name = "mac-cleaner"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
directories = "6.0.0"
globset = "0.4.18"
ignore = "0.4.27"
libc = "0.2.186"
memmap2 = "0.9.11"
ratatui = "0.30.2"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
trash = "5.2.6"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
incremental = false
